--- a/videoview/build.gradle
+++ b/videoview/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.8.4'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.8.4'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
